--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-world-flags": "^1.4.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-world-flags": "^1.5.1",
     "typescript": "5.1.3"
   }
 }
